tests/paczka1/fuzzy1/42864739.err
Error in line 6: 0EOoXsMWcFz S17 34,6
Error in line 9: JxDUWJym S527 0,2
Error in line 22: 2aB7CNWlt8N A562 41,8
Error in line 28: 2aB7CNWlt8N S527 98,4
Error in line 26: 02Pj14 S527 98,3
